# sandspiel

./: Cargo.toml  README.md
pixels_renderer/: Cargo.toml
pixels_renderer/src/: gui.rs  main.rs
simulation/: Cargo.toml
simulation/benches/: tick_time.rs
simulation/src/: entities.rs  lib.rs  sand_sim.rs  universe.rs  utils.rs
simulation/src/entities/: cell_content.rs  direction.rs  material.rs
src/: main.rs  sand_sim.rs  sandspiel_static_5.rs  sandspiel_terminal.rs  sim_printer.rs  universe.rs  wgpu_renderer.rs
terminal_renderer/: Cargo.toml
terminal_renderer/src/: main.rs
universe/: Cargo.toml
universe/src/: cell.rs  universe.rs
wasm-pack-renderer/: Cargo.toml  LICENSE_MIT
wasm-pack-renderer/src/: lib.rs
wasm-pack-renderer/www/: index.html  index.js  package-lock.json  package.json
webgpu_renderer/: Cargo.toml
webgpu_renderer/src/: main.rs
