[package]
name = "pixels_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simulation = { path = "../simulation"}
pixels = "0.10.0"
winit = "0.27.5"
winit_input_helper = "0.13.0"
log = "0.4.17"
env_logger = "0.9.1"
egui = "0.19.0"
egui-winit = "0.19.0"
egui-wgpu = "0.19.0"
